# COMP3421

./: .gitmodules
myDemo/: CMakeLists.txt
myDemo/camera01/: CMakeLists.txt
myDemo/camera01/src/: main.cpp
myDemo/camera02/: CMakeLists.txt
myDemo/camera02/src/: euler_camera.cpp  euler_camera.hpp  main.cpp  memes.cpp  memes.hpp  scene.hpp  shapes.hpp  static_mesh.cpp  texture_2d.cpp
myDemo/lib/include/glad/: glad.h
myDemo/lib/lib/pkgconfig/: tinyobjloader.pc
myOpenGLStudy/: CMakeLists.txt
myOpenGLStudy/1_getting_study/: CMakeLists.txt
myOpenGLStudy/1_getting_study/1_1_hello_window/: CMakeLists.txt
myOpenGLStudy/1_getting_study/1_hello_window/: CMakeLists.txt  README.md
myOpenGLStudy/1_getting_study/2_2_hello_triangle_indexed/: CMakeLists.txt
myOpenGLStudy/1_getting_study/2_3_hello_triangle_exercise1/: CMakeLists.txt
myOpenGLStudy/1_getting_study/2_4_hello_triangle_exercise2/: CMakeLists.txt
myOpenGLStudy/1_getting_study/2_hello_triangle/: CMakeLists.txt  README.md
myOpenGLStudy/1_getting_study/2_hello_triangle/2_1_hello_triangle/: CMakeLists.txt
myOpenGLStudy/1_getting_study/2_hello_triangle/2_5_hello_triangle_exercise3/: CMakeLists.txt
myOpenGLStudy/1_getting_study/3_1_shaders_uniform/: README.md
myOpenGLStudy/1_getting_study/3_2_shaders_interpolation/src/: shaders_interpolation.cpp
myOpenGLStudy/1_getting_study/3_3_shaders_class/src/: shaders_class.cpp
myOpenGLStudy/1_getting_study/3_5_shaders_exercise2/: CMakeLists.txt
myOpenGLStudy/1_getting_study/3_5_shaders_exercise2/src/: shader_exercise2.cpp
myOpenGLStudy/1_getting_study/3_6_shaders_exercise3/: CMakeLists.txt
myOpenGLStudy/1_getting_study/3_shaders/: CMakeLists.txt
myOpenGLStudy/1_getting_study/3_shaders/3_1_shaders_uniform/: CMakeLists.txt
myOpenGLStudy/1_getting_study/3_shaders/3_2_shaders_interpolation/: CMakeLists.txt
myOpenGLStudy/1_getting_study/3_shaders/3_3_shaders_class/: CMakeLists.txt
myOpenGLStudy/1_getting_study/3_shaders/3_4_shaders_exercise1/: CMakeLists.txt
myOpenGLStudy/1_getting_study/4_1_textures/: README.md
myOpenGLStudy/1_getting_study/4_1_textures/src/: textures.cpp
myOpenGLStudy/1_getting_study/4_2_textures_combined/: CMakeLists.txt
myOpenGLStudy/1_getting_study/4_2_textures_combined/src/: shader_s.hpp  textures_combined.cpp
myOpenGLStudy/1_getting_study/4_3_textures_exercise1/src/: textures_exercise1.cpp
myOpenGLStudy/1_getting_study/4_4_textures_exercise2/: CMakeLists.txt
myOpenGLStudy/1_getting_study/4_6_textures_exercise4/: CMakeLists.txt
myOpenGLStudy/1_getting_study/4_textures/: CMakeLists.txt
myOpenGLStudy/1_getting_study/4_textures/4_1_textures/: CMakeLists.txt
myOpenGLStudy/1_getting_study/4_textures/4_3_textures_exercise1/: CMakeLists.txt
myOpenGLStudy/1_getting_study/4_textures/4_5_textures_exercise3/: CMakeLists.txt
myOpenGLStudy/1_getting_study/5_1_transformations/: README.md
myOpenGLStudy/1_getting_study/5_3_transformations_exercise2/: README.md
myOpenGLStudy/1_getting_study/5_transformations/: CMakeLists.txt
myOpenGLStudy/1_getting_study/5_transformations/5_1_transformations/: CMakeLists.txt
myOpenGLStudy/1_getting_study/5_transformations/5_2_transformations_exercise1/: CMakeLists.txt
myOpenGLStudy/1_getting_study/5_transformations/5_3_transformations_exercise2/: CMakeLists.txt
myOpenGLStudy/1_getting_study/6_2_coordinate_systems_depth/src/: coordinate_systems_depth.cpp
myOpenGLStudy/1_getting_study/6_3_coordinate_systems_multiple/: CMakeLists.txt
myOpenGLStudy/1_getting_study/6_3_coordinate_systems_multiple/src/: coordinate_systems_multiple.cpp
myOpenGLStudy/1_getting_study/6_coordinate_systems/: CMakeLists.txt
myOpenGLStudy/1_getting_study/6_coordinate_systems/6_1_coordinate_systems/: CMakeLists.txt
myOpenGLStudy/1_getting_study/6_coordinate_systems/6_2_coordinate_systems_depth/: CMakeLists.txt
myOpenGLStudy/1_getting_study/7_camera/: CMakeLists.txt  README.md
myOpenGLStudy/1_getting_study/7_camera/7_1_camera_circle/: CMakeLists.txt
myOpenGLStudy/1_getting_study/7_camera/7_2_camera_keyboard_dt/: CMakeLists.txt
myOpenGLStudy/1_getting_study/7_camera/7_3_camera_mouse_zoom/: CMakeLists.txt
myOpenGLStudy/1_getting_study/7_camera/7_4_camera_class/: CMakeLists.txt
myOpenGLStudy/2_lighting/: CMakeLists.txt
myOpenGLStudy/2_lighting/1_colors/: CMakeLists.txt  README.md
myOpenGLStudy/2_lighting/1_colors/1_1_colors/: CMakeLists.txt
myOpenGLStudy/2_lighting/2_basic_lighting/: CMakeLists.txt  README.md
myOpenGLStudy/2_lighting/2_basic_lighting/2_1_basic_lighting_diffuse/: CMakeLists.txt
myOpenGLStudy/2_lighting/2_basic_lighting/2_2_basic_lighting_specular/: CMakeLists.txt
myOpenGLStudy/2_lighting/3_materials/: CMakeLists.txt  README.md
myOpenGLStudy/2_lighting/3_materials/3_1_materials/: CMakeLists.txt
myOpenGLStudy/2_lighting/4_lighting_maps/: CMakeLists.txt  README.md
myOpenGLStudy/2_lighting/4_lighting_maps/4_1_lighting_maps_diffuse_map/: CMakeLists.txt
myOpenGLStudy/2_lighting/4_lighting_maps/4_2_lighting_maps_specular_map/: CMakeLists.txt
myOpenGLStudy/2_lighting/5_light_casters/: CMakeLists.txt  README.md
myOpenGLStudy/2_lighting/5_light_casters/5_1_light_casters_directional/: CMakeLists.txt
myOpenGLStudy/2_lighting/6_multiple_lights/: CMakeLists.txt  README.md
myOpenGLStudy/4_advance_opengl/: CMakeLists.txt
myOpenGLStudy/4_advance_opengl/5_framebuffers/: CMakeLists.txt  README.md
myOpenGLStudy/lib/: CMakeLists.txt
myOpenGLStudy/src/1.getting_study/: CMakeLists.txt
objDemo/: CMakeLists.txt
objDemo/include/objDemo/: animator.hpp  camera.hpp  memes.hpp  renderer.hpp  scene.hpp
objDemo/src/: animator.cpp  camera.cpp  main.cpp  memes.cpp  model.cpp  renderer.cpp  scene.cpp
opengl_cmake_setup/: .gitignore  CMakeLists.txt  README.md
opengl_cmake_setup/playground/: CMakeLists.txt
opengl_cmake_setup/playground/chicken/: CMakeLists.txt
opengl_cmake_setup/src/: main.cpp
testDep/: my_fetch_deps.sh
tutorials/tute10/: CMakeLists.txt  README.md
tutorials/tute10/src/: framebuffer.cpp  main.cpp  memes.cpp  model.cpp  renderer.cpp  scene.cpp
(+144 files in other folders)
