set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/1_getting_study)

add_subdirectory(1_1_hello_window)
add_subdirectory(2_1_hello_triangle)
add_subdirectory(2_2_hello_triangle_indexed)
add_subdirectory(2_3_hello_triangle_exercise1)
add_subdirectory(2_4_hello_triangle_exercise2)
add_subdirectory(2_5_hello_triangle_exercise3)
add_subdirectory(3_1_shaders_uniform)
add_subdirectory(3_2_shaders_interpolation)
add_subdirectory(3_3_shaders_class)
add_subdirectory(3_4_shaders_exercise1)
add_subdirectory(3_5_shaders_exercise2)
add_subdirectory(3_6_shaders_exercise3)
add_subdirectory(4_1_textures)
add_subdirectory(4_2_textures_combined)
add_subdirectory(4_3_textures_exercise1)
add_subdirectory(4_4_textures_exercise2)
add_subdirectory(4_5_textures_exercise3)
add_subdirectory(4_6_textures_exercise4)