set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/1_getting_study)

add_subdirectory(1_hello_window)
add_subdirectory(2_hello_triangle)
add_subdirectory(3_1_shaders_uniform)
add_subdirectory(3_2_shaders_interpolation)
add_subdirectory(3_3_shaders_class)
add_subdirectory(3_4_shaders_exercise1)
add_subdirectory(3_5_shaders_exercise2)
add_subdirectory(3_6_shaders_exercise3)
add_subdirectory(4_1_textures)
add_subdirectory(4_2_textures_combined)
add_subdirectory(4_3_textures_exercise1)
add_subdirectory(4_4_textures_exercise2)
add_subdirectory(4_5_textures_exercise3)
add_subdirectory(4_6_textures_exercise4)
add_subdirectory(5_1_transformations)
add_subdirectory(5_2_transformations_exercise1)
add_subdirectory(5_3_transformations_exercise2)
add_subdirectory(6_1_coordinate_systems)
add_subdirectory(6_2_coordinate_systems_depth)
add_subdirectory(6_3_coordinate_systems_multiple)