set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/1_getting_study)

add_subdirectory(1_hello_window)
add_subdirectory(2_hello_triangle)
add_subdirectory(3_shaders)
add_subdirectory(4_textures)
add_subdirectory(5_1_transformations)
add_subdirectory(5_2_transformations_exercise1)
add_subdirectory(5_3_transformations_exercise2)
add_subdirectory(6_1_coordinate_systems)
add_subdirectory(6_2_coordinate_systems_depth)
add_subdirectory(6_3_coordinate_systems_multiple)