set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/2_hello_triangle)

add_subdirectory(2_1_hello_triangle)
add_subdirectory(2_2_hello_triangle_indexed)
add_subdirectory(2_3_hello_triangle_exercise1)
add_subdirectory(2_4_hello_triangle_exercise2)
add_subdirectory(2_5_hello_triangle_exercise3)
